[tool.poetry]
name = "project_euler"
version = "0.1.0"
description = ""
authors = ["Alexander Winkles <atwinkles@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
